Fixed toolbar button vertical align

--- a/src/theme/common.scss
+++ b/src/theme/common.scss
@@ -430,6 +430,7 @@ select {
     }
     & > button {
       min-width: 28px;
+      line-height: 24px;
     }
     label {
       border: 1px dashed var(--border) !important;
